# empty-experimental

./: .gitignore  CMakeLists.txt  README.md  msvc.cmd
cmake/: configuration.cmake  glslang.cmake  msvc-nmake.cmake
cmake/module/: build-print.cmake  external-glslang.cmake  external-install.cmake
data/shader/: shader.vert
sources/empty/: CMakeLists.txt
sources/empty/core/: defines.h  typedef.h
sources/empty/graphics/: graphics.cpp  graphics.h
sources/empty/window/: application.cpp  application.h  wnd.cpp  wnd.h
sources/sample/: CMakeLists.txt  sample.cpp
